# opentelemetry-langfuse

./: .gitignore  .gitleaks.toml  AUTOMATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RENOVATE_ANALYSIS.md  SECURITY.md  deny.toml  release-plz.toml  renovate.json5  rustfmt.toml
.github/: settings.yml
.github/workflows/: ci.yml  coverage.yml  dependencies.yml  release-plz.yml  security.yml
examples/: async_batch.rs  basic.rs  basic_llm_tracing.rs  context_passing.rs  custom_config.rs  custom_http_client.rs  issue_10_no_http_client.rs  manual_config.rs  otel_env.rs  span_enrichment.rs  sync_batch.rs  sync_simple.rs  test_endpoint_construction.rs
src/: attributes.rs  auth.rs  builder.rs  constants.rs  context.rs  endpoint.rs  error.rs  exporter.rs  lib.rs  mapper.rs  processor.rs  span_ext.rs  span_storage.rs  tracer.rs
tests/: integration_test.rs  span_enrichment_test.rs
