[package]
name = "opentelemetry-langfuse"
version = "0.2.0"
edition = "2021"
authors = ["Tim Van Wassenhove <github@timvw.be>"]
license = "MIT OR Apache-2.0"
description = "OpenTelemetry components and utilities for Langfuse LLM observability"
repository = "https://github.com/genai-rs/opentelemetry-langfuse"
homepage = "https://github.com/genai-rs/opentelemetry-langfuse"
documentation = "https://docs.rs/opentelemetry-langfuse"
readme = "README.md"
keywords = ["opentelemetry", "langfuse", "observability", "tracing", "monitoring"]
categories = ["api-bindings", "web-programming::http-client", "development-tools::debugging"]
rust-version = "1.82"

[lints.rust]
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[dependencies]
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "trace", "testing"] }
opentelemetry-otlp = { version = "0.30", features = ["tokio", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1.0"
tokio = { version = "1.41", features = ["sync"] }
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
serial_test = "3.0"
langfuse-ergonomic = "0.2"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["tokio"]
tokio = ["opentelemetry_sdk/rt-tokio", "tokio/rt"]
