[package]
name = "opentelemetry-langfuse"
version = "0.5.0"
edition = "2021"
authors = ["Tim Van Wassenhove <github@timvw.be>"]
license = "MIT OR Apache-2.0"
description = "OpenTelemetry components and utilities for Langfuse LLM observability"
repository = "https://github.com/genai-rs/opentelemetry-langfuse"
homepage = "https://github.com/genai-rs/opentelemetry-langfuse"
documentation = "https://docs.rs/opentelemetry-langfuse"
readme = "README.md"
keywords = ["opentelemetry", "langfuse", "observability", "tracing", "monitoring"]
categories = ["api-bindings", "web-programming::http-client", "development-tools::debugging"]
rust-version = "1.82"

[lints.rust]
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[dependencies]
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client"] }
base64 = "0.22"
thiserror = "2.0"
# We expose reqwest::Client in our public API (with_http_client method)
# The actual HTTP/TLS functionality comes from opentelemetry-otlp's reqwest-client feature
reqwest = { version = "0.12", default-features = false }


[dev-dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
tracing = "0.1"
chrono = "0.4"
serial_test = "3.0"
langfuse-ergonomic = "0.5"
serde_json = "1.0"

[features]
default = []
